[package]
name = "binance-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"
url = "2.5"
binance = "0.21.0"
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
error-chain = "0.12.4"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.8"
eyre = "0.6.12"
thiserror = "1.0.60"
static_init = "1.0.3"
auto_impl = "1.2.0"
futures = "0.3.30"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
strum_macros = "0.26.2"
binance-cex-macros = { version = "0.1.0", path = "binance-cex-macros" }
serde_qs = "0.13.0"
http = "1.1.0"
either = { version = "1.12.0", features = ["serde"] }
envmnt = "0.10.4"
moro = "0.4.0"
chrono = "0.4.38"
tokio-util = "0.7.11"
